config Swagger (http://localhost:8081/swagger-ui/)